sunvox_lib/sunvox.h

typedef struct
{
    uint8_t	note;           /* NN: 0 - nothing; 1..127 - note num; 128 - note off; 129, 130... - see NOTECMD_* defines */
    uint8_t	vel;            /* VV: Velocity 1..129; 0 - default */
    uint16_t	module;         /* MM: 0 - nothing; 1..65535 - module number + 1 */
    uint16_t	ctl;            /* 0xCCEE: CC: 1..127 - controller number + 1; EE - effect */
    uint16_t	ctl_val;        /* 0xXXYY: controller value or effect parameter */
} sunvox_note;
/*
   sv_get_pattern_xxxx - get pattern information
   x - time (line number);
   y - vertical position on timeline;
   tracks - number of pattern tracks;
   lines - number of pattern lines;
   name - pattern name or NULL;
*/
int sv_get_pattern_x( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_y( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_tracks( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_lines( int slot, int pat_num ) SUNVOX_FN_ATTR;
const char* sv_get_pattern_name( int slot, int pat_num ) SUNVOX_FN_ATTR;
/*
   sv_get_pattern_data() - get the pattern buffer (for reading and writing)
   containing notes (events) in the following order:
     line 0: note for track 0, note for track 1, ... note for track X;
     line 1: note for track 0, note for track 1, ... note for track X;
     ...
     line X: ...
   Example:
     int pat_tracks = sv_get_pattern_tracks( slot, pat_num ); //number of tracks
     sunvox_note* data = sv_get_pattern_data( slot, pat_num ); //get the buffer with all the pattern events (notes)
     sunvox_note* n = &data[ line_number * pat_tracks + track_number ];
     ... and then do someting with note n ...
*/
sunvox_note* sv_get_pattern_data( int slot, int pat_num ) SUNVOX_FN_ATTR;
/*
   sv_set_pattern_event() - write the pattern event to the cell at the specified line and track
   nn,vv,mm,ccee,xxyy are the same as the fields of sunvox_note structure.
   Only non-negative values will be written to the pattern.
   Return value: 0 (sucess) or negative error code.
*/
int sv_set_pattern_event( int slot, int pat_num, int track, int line, int nn, int vv, int mm, int ccee, int xxyy ) SUNVOX_FN_ATTR;
/*
   sv_get_pattern_event() - read a pattern event at the specified line and track
   column (field number):
      0 - note (NN);
      1 - velocity (VV);
      2 - module (MM);
      3 - controller number or effect (CCEE);
      4 - controller value or effect parameter (XXYY);
   Return value: value of the specified field or negative error code.
*/
int sv_get_pattern_event( int slot, int pat_num, int track, int line, int column ) SUNVOX_FN_ATTR;
/*
   sv_pattern_mute() - mute (1) / unmute (0) specified pattern;
   negative values are ignored;
   return value: previous state (1 - muted; 0 - unmuted) or -1 (error);
*/
int sv_pattern_mute( int slot, int pat_num, int mute ) SUNVOX_FN_ATTR; /* USE LOCK/UNLOCK! */
/*
   SunVox engine uses system-provided time space, measured in system ticks (don't confuse it with the project ticks).
   These ticks are required for parameters of functions such as sv_audio_callback() and sv_set_event_t().
   Use sv_get_ticks() to get current tick counter (from 0 to 0xFFFFFFFF).
   Use sv_get_ticks_per_second() to get the number of system ticks per second.
*/
uint32_t sv_get_ticks( void ) SUNVOX_FN_ATTR;
uint32_t sv_get_ticks_per_second( void ) SUNVOX_FN_ATTR;
/*
   sv_get_log() - get the latest messages from the log
   Parameters:
     size - max number of bytes to read.
   Return value: pointer to the null-terminated string with the latest log messages.
*/
const char* sv_get_log( int size ) SUNVOX_FN_ATTR;