lib/src/libsunvox_generated_bindings.dart


  late final _sv_get_pattern_xPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_pattern_x');
  late final _sv_get_pattern_x =
      _sv_get_pattern_xPtr.asFunction<int Function(int, int)>();

  int sv_get_pattern_y(
    int slot,
    int pat_num,
  ) {
    return _sv_get_pattern_y(
      slot,
      pat_num,
    );
  }

  late final _sv_get_pattern_yPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_pattern_y');
  late final _sv_get_pattern_y =
      _sv_get_pattern_yPtr.asFunction<int Function(int, int)>();

  int sv_get_pattern_tracks(
    int slot,
    int pat_num,
  ) {
    return _sv_get_pattern_tracks(
      slot,
      pat_num,
    );
  }

  late final _sv_get_pattern_tracksPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_pattern_tracks');
  late final _sv_get_pattern_tracks =
      _sv_get_pattern_tracksPtr.asFunction<int Function(int, int)>();

  int sv_get_pattern_lines(
    int slot,
    int pat_num,
  ) {
    return _sv_get_pattern_lines(
      slot,
      pat_num,
    );
  }

  late final _sv_get_pattern_linesPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_pattern_lines');
  late final _sv_get_pattern_lines =
      _sv_get_pattern_linesPtr.asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Int8> sv_get_pattern_name(
    int slot,
    int pat_num,
  ) {
    return _sv_get_pattern_name(
      slot,
      pat_num,
    );
  }

  late final _sv_get_pattern_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int8> Function(
              ffi.Int32, ffi.Int32)>>('sv_get_pattern_name');
  late final _sv_get_pattern_name = _sv_get_pattern_namePtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(int, int)>();

  ffi.Pointer<sunvox_note> sv_get_pattern_data(
    int slot,
    int pat_num,
  ) {
    return _sv_get_pattern_data(
      slot,
      pat_num,
    );
  }

  late final _sv_get_pattern_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<sunvox_note> Function(
              ffi.Int32, ffi.Int32)>>('sv_get_pattern_data');
  late final _sv_get_pattern_data = _sv_get_pattern_dataPtr
      .asFunction<ffi.Pointer<sunvox_note> Function(int, int)>();

  int sv_set_pattern_event(
    int slot,
    int pat_num,
    int track,
    int line,
    int nn,
    int vv,
    int mm,
    int ccee,
    int xxyy,
  ) {
    return _sv_set_pattern_event(
      slot,
      pat_num,
      track,
      line,
      nn,
      vv,
      mm,
      ccee,
      xxyy,
    );
  }

  late final _sv_set_pattern_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32)>>('sv_set_pattern_event');
  late final _sv_set_pattern_event = _sv_set_pattern_eventPtr
      .asFunction<int Function(int, int, int, int, int, int, int, int, int)>();

  int sv_get_pattern_event(
    int slot,
    int pat_num,
    int track,
    int line,
    int column,
  ) {
    return _sv_get_pattern_event(
      slot,
      pat_num,
      track,
      line,
      column,
    );
  }

  late final _sv_get_pattern_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32,
              ffi.Int32)>>('sv_get_pattern_event');
  late final _sv_get_pattern_event = _sv_get_pattern_eventPtr
      .asFunction<int Function(int, int, int, int, int)>();

  int sv_pattern_mute(
    int slot,
    int pat_num,
    int mute,
  ) {
    return _sv_pattern_mute(
      slot,
      pat_num,
      mute,
    );
  }

  late final _sv_pattern_mutePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32, ffi.Int32, ffi.Int32)>>('sv_pattern_mute');
  late final _sv_pattern_mute =
      _sv_pattern_mutePtr.asFunction<int Function(int, int, int)>();

  int sv_get_ticks() {
    return _sv_get_ticks();
  }

  late final _sv_get_ticksPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('sv_get_ticks');
  late final _sv_get_ticks = _sv_get_ticksPtr.asFunction<int Function()>();

  int sv_get_ticks_per_second() {
    return _sv_get_ticks_per_second();
  }

  late final _sv_get_ticks_per_secondPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
          'sv_get_ticks_per_second');
  late final _sv_get_ticks_per_second =
      _sv_get_ticks_per_secondPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Int8> sv_get_log(
    int size,
  ) {
    return _sv_get_log(
      size,
    );
  }

  late final _sv_get_logPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(ffi.Int32)>>(
          'sv_get_log');
  late final _sv_get_log =
      _sv_get_logPtr.asFunction<ffi.Pointer<ffi.Int8> Function(int)>();
}

class _fsid_t_ extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int32> _val_;
}

class _mbstate_t_ extends ffi.Struct {
  @ffi.Int32()
  external int _count_;

  external UnnamedUnion1 _value_;
}

class UnnamedUnion1 extends ffi.Union {
  @ffi.Uint32()
  external int _wch_;

  @ffi.Array.multi([4])
  external ffi.Array<ffi.Int8> _wchb_;
}

class G_fpos_t_ extends ffi.Struct {
  @__off_t()
  external int _pos_;

  external _mbstate_t_ _state_;
}

typedef __off_t = ffi.Int64;

class G_fpos64_t_ extends ffi.Struct {
  @__off64_t()
  external int _pos_;

  external _mbstate_t_ _state_;
}

typedef __off64_t = ffi.Int64;

class IO_FILE_ extends ffi.Struct {
  @ffi.Int32()
  external int flags_;

  external ffi.Pointer<ffi.Int8> IO_read_ptr_;

  external ffi.Pointer<ffi.Int8> IO_read_end_;

  external ffi.Pointer<ffi.Int8> IO_read_base_;

  external ffi.Pointer<ffi.Int8> IO_write_base_;

  external ffi.Pointer<ffi.Int8> IO_write_ptr_;

  external ffi.Pointer<ffi.Int8> IO_write_end_;

  external ffi.Pointer<ffi.Int8> IO_buf_base_;

  external ffi.Pointer<ffi.Int8> IO_buf_end_;

  external ffi.Pointer<ffi.Int8> IO_save_base_;

  external ffi.Pointer<ffi.Int8> IO_backup_base_;

  external ffi.Pointer<ffi.Int8> IO_save_end_;

  external ffi.Pointer<IO_marker_> markers_;

  external ffi.Pointer<IO_FILE_> chain_;

  @ffi.Int32()
  external int fileno_;

  @ffi.Int32()
  external int flags2_;

  @__off_t()
  external int old_offset_;

  @ffi.Uint16()
  external int cur_column_;

  @ffi.Int8()
  external int vtable_offset_;

  @ffi.Array.multi([1])
  external ffi.Array<ffi.Int8> shortbuf_;

  external ffi.Pointer<_IO_lock_t> lock_;

  @__off64_t()
  external int offset_;

  external ffi.Pointer<IO_codecvt_> codecvt_;

  external ffi.Pointer<IO_wide_data_> wide_data_;

  external ffi.Pointer<IO_FILE_> freeres_list_;

  external ffi.Pointer<ffi.Void> freeres_buf_;

  @size_t()
  external int _pad5_;

  @ffi.Int32()
  external int mode_;

  @ffi.Array.multi([20])
  external ffi.Array<ffi.Int8> unused2_;
}

class IO_marker_ extends ffi.Opaque {}

typedef _IO_lock_t = ffi.Void;

class IO_codecvt_ extends ffi.Opaque {}

class IO_wide_data_ extends ffi.Opaque {}

typedef size_t = ffi.Uint64;
typedef FILE = IO_FILE_;

class _va_list_tag_ extends ffi.Struct {
  @ffi.Uint32()
  external int gp_offset;

  @ffi.Uint32()
  external int fp_offset;

  external ffi.Pointer<ffi.Void> overflow_arg_area;

  external ffi.Pointer<ffi.Void> reg_save_area;
}

typedef __ssize_t = ffi.Int64;
typedef fpos_t = __fpos_t;
typedef __fpos_t = G_fpos_t_;

class sunvox_note extends ffi.Struct {
  @ffi.Uint8()
  external int note;

  @ffi.Uint8()
  external int vel;

  @ffi.Uint16()
  external int module;

  @ffi.Uint16()
  external int ctl;

  @ffi.Uint16()
  external int ctl_val;
}

const int _STDIO_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2X = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 1;

const int __SYSCALL_WORDSIZE = 64;

const int __TIMESIZE = 64;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;

const int __GLIBC_MINOR__ = 34;

const int _SYS_CDEFS_H = 1;

const int __THROW = 1;

const int __THROWNL = 1;

const int __glibc_c99_flexarr_available = 1;

const int __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI = 0;

const int __HAVE_GENERIC_SELECTION = 0;

const int __GLIBC_USE_LIB_EXT2 = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT_C2X = 1;

const int __GLIBC_USE_IEC_60559_TYPES_EXT = 1;

const int NULL = 0;

const int __GNUC_VA_LIST = 1;

const int _BITS_TYPES_H = 1;

const int _BITS_TYPESIZES_H = 1;

const int __OFF_T_MATCHES_OFF64_T = 1;

const int __INO_T_MATCHES_INO64_T = 1;

const int __RLIM_T_MATCHES_RLIM64_T = 1;

const int __STATFS_MATCHES_STATFS64 = 1;

const int __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64 = 1;

const int __FD_SETSIZE = 1024;

const int _BITS_TIME64_H = 1;

const int _____fpos_t_defined = 1;

const int ____mbstate_t_defined = 1;

const int _____fpos64_t_defined = 1;

const int ____FILE_defined = 1;

const int __FILE_defined = 1;

const int __struct_FILE_defined = 1;

const int _IO_EOF_SEEN = 16;

const int _IO_ERR_SEEN = 32;

const int _IO_USER_LOCK = 32768;

const int _IOFBF = 0;

const int _IOLBF = 1;

const int _IONBF = 2;

const int BUFSIZ = 8192;

const int EOF = -1;

const int SEEK_SET = 0;

const int SEEK_CUR = 1;

const int SEEK_END = 2;

const String P_tmpdir = '/tmp';

const int _BITS_STDIO_LIM_H = 1;

const int L_tmpnam = 20;

const int TMP_MAX = 238328;

const int FILENAME_MAX = 4096;

const int L_ctermid = 9;

const int FOPEN_MAX = 16;

const int __HAVE_FLOAT128 = 0;

const int __HAVE_DISTINCT_FLOAT128 = 0;

const int __HAVE_FLOAT64X = 1;

const int __HAVE_FLOAT64X_LONG_DOUBLE = 1;

const int __HAVE_FLOAT16 = 0;

const int __HAVE_FLOAT32 = 1;

const int __HAVE_FLOAT64 = 1;

const int __HAVE_FLOAT32X = 1;

const int __HAVE_FLOAT128X = 0;

const int __HAVE_DISTINCT_FLOAT16 = 0;

const int __HAVE_DISTINCT_FLOAT32 = 0;

const int __HAVE_DISTINCT_FLOAT64 = 0;

const int __HAVE_DISTINCT_FLOAT32X = 0;

const int __HAVE_DISTINCT_FLOAT64X = 0;

const int __HAVE_DISTINCT_FLOAT128X = 0;

const int __HAVE_FLOAT128_UNLIKE_LDBL = 0;

const int __HAVE_FLOATN_NOT_TYPEDEF = 0;

const int _STDINT_H = 1;

const int _BITS_WCHAR_H = 1;

const int __WCHAR_MAX = 2147483647;

const int __WCHAR_MIN = -2147483648;

const int _BITS_STDINT_INTN_H = 1;

const int _BITS_STDINT_UINTN_H = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;
